<resources>
    <string name="app_name">Contacts</string>
    <string name="action_settings">Settings</string>
    <string name="new_contact">New A Contact</string>
    <string name="name">name</string>
    <string name="AddContact">Addcontact</string>
    <string name="phone1">phone1</string>
    <string name="phone2">phone2</string>
    <string name="tel">tel</string>
    <string name="add">Add</string>
    <string name="pname">Please enter a name</string>
    <string name="groupname">Group Name</string>
    <string name="add_group">Add Group</string>
</resources>
